# imgui-node-editor

./: CMakeLists.txt
examples/blueprints-example/: blueprints-example.cpp
include/imgui-node-editor/: imgui_bezier_math.h  imgui_bezier_math.inl  imgui_extra_math.h  imgui_extra_math.inl  imgui_node_editor_internal.h  imgui_node_editor_internal.inl  platform.h  renderer.h
misc/cmake-modules/: Findimgui_node_editor.cmake
src/: application.cpp  builders.cpp  crude_json.cpp  drawing.cpp  entry_point.cpp  imgui_canvas.cpp  imgui_impl_dx11.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_win32.cpp  imgui_node_editor.cpp  imgui_node_editor_api.cpp  platform_glfw.cpp  platform_win32.cpp  renderer_dx11.cpp  renderer_ogl3.cpp  widgets.cpp
